# termux-Oo

.github/workflows/: build_unsigned_apk.yml  gradle-wrapper-validation.yml  run_tests.yml
app/: build.gradle
app/src/main/java/com/termux/app/: TermuxActivity.java  TermuxOpenReceiver.java
app/src/main/java/com/termux/app/activities/: HelpActivity.java
app/src/main/java/com/termux/app/api/file/: FileReceiverActivity.java
app/src/main/java/com/termux/app/event/: SystemEventReceiver.java
app/src/main/java/com/termux/app/terminal/: TermuxTerminalViewClient.java
extras/claude-termux/: README.md  claude  claude-setup
extras/vk-gemm/: CMakeLists.txt  README.md  build.sh  gemm_coopmat.spv  gemm_tiled.spv
extras/vk-gemm/packaging/: vk_gemm
extras/vk-gemm/shaders/: compile.sh  gemm_coopmat.comp  gemm_tiled.comp
extras/vk-gemm/src/: main.c
termux-shared/: build.gradle
termux-shared/src/main/java/com/termux/shared/android/: AndroidUtils.java
